// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkTableHead should render correctly 1`] = `
<DocumentFragment>
  <table>
    <thead>
      <tr>
        <th>
          Skyscanner
        </th>
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;

exports[`BpkTableHead should render correctly with arbitrary props 1`] = `
<DocumentFragment>
  <table>
    <thead
      data-foo="bar"
      id="my-custom-id"
    >
      <tr>
        <th>
          Skyscanner
        </th>
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;

exports[`BpkTableHead should render correctly with custom class 1`] = `
<DocumentFragment>
  <table>
    <thead
      class="my-custom-class"
    >
      <tr>
        <th>
          Skyscanner
        </th>
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;
